--- a/src/MEGASync/gui/Resources_light.qrc
+++ b/src/MEGASync/gui/Resources_light.qrc
@@ -88,6 +88,56 @@
         <file alias="images/icons/tray/windows/open_links.svg">images/icons/tray/windows/open_links.svg</file>
         <file alias="images/icons/tray/macos/exit.svg">images/icons/tray/macos/exit.svg</file>
         <file alias="images/icons/tray/macos/settings.svg">images/icons/tray/macos/settings.svg</file>
-        <file alias="app-icon">images/themed/light/app-icon.svg</file>
+        <file alias="check-circle.svg">images/themed/light/check-circle.svg</file>
+        <file alias="pause.svg">images/themed/light/pause.svg</file>
+        <file alias="pause-circle.svg">images/themed/light/pause-circle.svg</file>
+        <file alias="play-circle.svg">images/themed/light/play-circle.svg</file>
+        <file alias="arrows-up-down-circle.svg">images/themed/light/arrows-up-down-circle.svg</file>
+        <file alias="x-circle.svg">images/themed/light/x-circle.svg</file>
+        <file alias="alert-circle.svg">images/themed/light/alert-circle.svg</file>
+        <file alias="arrows-up-down-circle.svg">images/qml/arrows-up-down-circle.svg</file>
+        <file alias="down-arrow.svg">images/qml/down-arrow.svg</file>
+        <file alias="up-arrow.svg">images/qml/up-arrow.svg</file>
+        <file alias="activity_indicator_1.svg">images/themed/light/activity_indicator_1.svg</file>
+        <file alias="activity_indicator_2.svg">images/themed/light/activity_indicator_2.svg</file>
+        <file alias="activity_indicator_3.svg">images/themed/light/activity_indicator_3.svg</file>
+        <file alias="activity_indicator_4.svg">images/themed/light/activity_indicator_4.svg</file>
+        <file alias="activity_indicator_5.svg">images/themed/light/activity_indicator_5.svg</file>
+        <file alias="activity_indicator_6.svg">images/themed/light/activity_indicator_6.svg</file>
+        <file alias="activity_indicator_7.svg">images/themed/light/activity_indicator_7.svg</file>
+        <file alias="activity_indicator_8.svg">images/themed/light/activity_indicator_8.svg</file>
+        <file alias="activity_indicator_9.svg">images/themed/light/activity_indicator_9.svg</file>
+        <file alias="activity_indicator_10.svg">images/themed/light/activity_indicator_10.svg</file>
+        <file alias="activity_indicator_11.svg">images/themed/light/activity_indicator_11.svg</file>
+        <file alias="activity_indicator_12.svg">images/themed/light/activity_indicator_12.svg</file>
+        <file alias="activity_indicator_13.svg">images/themed/light/activity_indicator_13.svg</file>
+        <file alias="activity_indicator_14.svg">images/themed/light/activity_indicator_14.svg</file>
+        <file alias="activity_indicator_15.svg">images/themed/light/activity_indicator_15.svg</file>
+        <file alias="activity_indicator_16.svg">images/themed/light/activity_indicator_16.svg</file>
+        <file alias="activity_indicator_17.svg">images/themed/light/activity_indicator_17.svg</file>
+        <file alias="activity_indicator_18.svg">images/themed/light/activity_indicator_18.svg</file>
+        <file alias="activity_indicator_19.svg">images/themed/light/activity_indicator_19.svg</file>
+        <file alias="activity_indicator_20.svg">images/themed/light/activity_indicator_20.svg</file>
+        <file alias="activity_indicator_21.svg">images/themed/light/activity_indicator_21.svg</file>
+        <file alias="activity_indicator_22.svg">images/themed/light/activity_indicator_22.svg</file>
+        <file alias="activity_indicator_23.svg">images/themed/light/activity_indicator_23.svg</file>
+        <file alias="activity_indicator_24.svg">images/themed/light/activity_indicator_24.svg</file>
+        <file alias="activity_indicator_25.svg">images/themed/light/activity_indicator_25.svg</file>
+        <file alias="activity_indicator_26.svg">images/themed/light/activity_indicator_26.svg</file>
+        <file alias="activity_indicator_27.svg">images/themed/light/activity_indicator_27.svg</file>
+        <file alias="activity_indicator_28.svg">images/themed/light/activity_indicator_28.svg</file>
+        <file alias="activity_indicator_29.svg">images/themed/light/activity_indicator_29.svg</file>
+        <file alias="activity_indicator_30.svg">images/themed/light/activity_indicator_30.svg</file>
+        <file alias="plus_icon_secondary.svg">images/themed/light/plus_icon_secondary.svg</file>
+        <file alias="menu.svg">images/themed/light/menu.svg</file>
+        <file alias="bell.svg">images/themed/light/bell.svg</file>
+        <file alias="gear-six.svg">images/themed/light/gear-six.svg</file>
+        <file alias="currency-dollar.svg">images/themed/light/currency-dollar.svg</file>
+        <file alias="folder-users.svg">images/themed/light/folder-users.svg</file>
+        <file alias="users.svg">images/themed/light/users.svg</file>
+        <file alias="chevron-down.svg">images/themed/light/chevron-down.svg</file>
+        <file alias="red-bell.svg">images/themed/light/red-bell.svg</file>
+        <file alias="folder-users-yellow.svg">images/folder-users-yellow.svg</file>
+        <file alias="folder-user-disabled.svg">images/folder-user-disabled.svg</file>
     </qresource>
 </RCC>
