--- a/src/MEGASync/gui/ui/StatusInfo.ui
+++ b/src/MEGASync/gui/ui/StatusInfo.ui
@@ -52,22 +52,22 @@ background-color: #fffafafa; /*colorToken.surface-1*/
 }
 #bIconState[state=&quot;paused&quot;]
 {
-qproperty-icon: url(:/images/themed/light/pause.svg); /*replaceThemeToken*/
+qproperty-icon: url(:/pause.svg);
 qproperty-iconSize: 16px 16px;
 }
 #bIconState[state=&quot;over_quota&quot;]
 {
-qproperty-icon: url(:/images/themed/light/alert-circle.svg); /*replaceThemeToken*/
+qproperty-icon: url(:/alert-circle.svg); 
 qproperty-iconSize: 16px 16px;
 }
 #bIconState[state=&quot;updated&quot;]
 {
-qproperty-icon:  url(:/images/themed/light/check-circle.svg); /*replaceThemeToken*/
+qproperty-icon:  url(:/check-circle.svg); 
 qproperty-iconSize: 16px 16px;
 }
 #bIconState[state=&quot;failed&quot;]
 {
-qproperty-icon: url(:/images/themed/light/x-circle.svg); /*replaceThemeToken*/
+qproperty-icon: url(:/x-circle.svg);
 qproperty-iconSize: 16px 16px;
 }
 #bIconState[state=&quot;syncing&quot;],
